add new publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,29 @@
+@inproceedings{li2023stylegene,
+  title={StyleGene: Crossover and Mutation of Region-Level Facial Genes for Kinship Face Synthesis},
+  author={Li, Hao and Hou, Xianxu and Huang, Zepeng and Shen, Linlin},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={20960--20969},
+  year={2023},
+  selected={true},
+  abbr={CVPR},
+  code={https://github.com/CVI-SZU/StyleGene},
+  pdf={https://openaccess.thecvf.com/content/CVPR2023/papers/Li_StyleGene_Crossover_and_Mutation_of_Region-Level_Facial_Genes_for_Kinship_CVPR_2023_paper.pdf},
+  teaser={cover-stylegene.jpg},
+}
+
+@article{hou2023deep,
+  title={Deep generative image priors for semantic face manipulation},
+  author={Hou, Xianxu and Shen, Linlin and Ming, Zhong and Qiu, Guoping},
+  journal={Pattern Recognition},
+  volume={139},
+  pages={109477},
+  year={2023},
+  publisher={Elsevier},
+  abbr={PR},
+  pdf={https://www.sciencedirect.com/science/article/abs/pii/S0031320323001772},
+  teaser={cover-gan-prior.jpg},
+}
+
 @inproceedings{li2022talk2face,
   title={Talk2Face: A Unified Sequence-based Framework for Diverse Face Generation and Analysis Tasks},
   author={Li, Yudong and Hou, Xianxu and Zhao, Zhe and Shen, Linlin and Yang, Xuefeng and Yan, Kimmo},
@@ -101,6 +127,8 @@
   pdf={https://arxiv.org/pdf/2012.11856.pdf},
   teaser={cover-guidedstyle.jpg},
   selected={true},
+  video={/assets/projects/guided-style/demo.mp4},
+
 }
 
 @article{hou2022feat,
