add stylegene website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,10 +5,11 @@
   pages={20960--20969},
   year={2023},
   selected={true},
-  abbr={CVPR},
+  abbr={CVPR Highlight},
   code={https://github.com/CVI-SZU/StyleGene},
   pdf={https://openaccess.thecvf.com/content/CVPR2023/papers/Li_StyleGene_Crossover_and_Mutation_of_Region-Level_Facial_Genes_for_Kinship_CVPR_2023_paper.pdf},
   teaser={cover-stylegene.jpg},
+  website={https://wmpscc.github.io/stylegene/}
 }
 
 @article{hou2023deep,
