--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,7 @@
   pages={109477},
   year={2023},
   publisher={Elsevier},
+  selected={true},
   abbr={PR},
   pdf={https://www.sciencedirect.com/science/article/abs/pii/S0031320323001772},
   teaser={cover-gan-prior.jpg},
