--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,42 @@
+@inproceedings{li2024flip,
+  title={FLIP-80M: 80 Million Visual-Linguistic Pairs for Facial Language-Image Pre-Training},
+  author={Li, Yudong and Hou, Xianxu and Dezhi, Zheng and Shen, Linlin and Zhao, Zhe},
+  booktitle={Proceedings of the 32nd ACM International Conference on Multimedia},
+  pages={58--67},
+  selected={true},
+  abbr={ACM MM},
+  pdf={https://openreview.net/pdf?id=FHguB1EYYi},
+  year={2024},
+  teaser={cover-flip80.jpg},
+  code={https://huggingface.co/datasets/FLIP-dataset/FLIP-80M}
+}
+
+@inproceedings{li2024dynamic,
+  title={Dynamic data sampler for cross-language transfer learning in large language models},
+  author={Li, Yudong and Feng, Yuhao and Zhou, Wen and Zhao, Zhe and Shen, Linlin and Hou, Cheng and Hou, Xianxu},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing},
+  pages={11291--11295},
+  abbr={ICASSP},
+  year={2024},
+  pdf={https://arxiv.org/pdf/2405.10626},
+  organization={IEEE},
+  teaser={cover-linly.png}
+}
+
+
+@inproceedings{gong2024dataset,
+  title={A Dataset and Model for Realistic License Plate Deblurring},
+  author={Gong, Haoyan and Feng, Yuzheng and Zhang, Zhenrong and Hou, Xianxu and Liu, Jingxin and Huang, Siqi and Liu, Hongbin},
+  booktitle={International Joint Conference on Artificial Intelligence},
+  year={2024},
+  pdf={https://www.ijcai.org/proceedings/2024/0086.pdf},
+  teaser={cover-ijcai-24.jpg},
+  abbr={IJCAI},
+  code={https://github.com/haoygong/lpdgan}
+}
+
+
+
 @inproceedings{li2023stylegene,
   title={StyleGene: Crossover and Mutation of Region-Level Facial Genes for Kinship Face Synthesis},
   author={Li, Hao and Hou, Xianxu and Huang, Zepeng and Shen, Linlin},
@@ -24,6 +63,17 @@
   abbr={PR},
   pdf={https://www.sciencedirect.com/science/article/abs/pii/S0031320323001772},
   teaser={cover-gan-prior.jpg},
+}
+
+@inproceedings{guo2023styleau,
+  title={StyleAU: StyleGAN based Facial Action Unit Manipulation for Expression Editing},
+  author={Guo, Yanliang and Hou, Xianxu and Liu, Feng and Shen, Linlin and Wang, Lei and Wang, Zhen and Liu, Peng},
+  booktitle={IEEE International Joint Conference on Biometrics},
+  pages={1--10},
+  year={2023},
+  abbr={IJCB},
+  teaser={cover-styleau.jpg},
+
 }
 
 @inproceedings{li2022talk2face,
@@ -129,8 +179,6 @@
   pdf={https://arxiv.org/pdf/2012.11856.pdf},
   teaser={cover-guidedstyle.jpg},
   selected={true},
-  video={/assets/projects/guided-style/demo.mp4},
-
 }
 
 @article{hou2022feat,
@@ -371,5 +419,6 @@
   selected={true},
   code={https://github.com/houxianxu/DFC-VAE}
 }
+
 
 
