--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,39 @@
+@inproceedings{xie2025high,
+  title={High-Fidelity Editable Portrait Synthesis with 3D GAN Inversion},
+  author={Xie, Jindong and Liu, Jiachen and Lin, Yupei and Wang, Jinbao and Hou, Xianxu and Shen, Linlin},
+  booktitle={EEE International Conference on Acoustics, Speech and Signal Processing},
+  pages={1--5},
+  year={2025},
+  abbr={ICASSP},
+  teaser={cover-3dgan.jpg},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10889627},
+}
+
+
+@article{wu2024light,
+  title={Light-aware contrastive learning for low-light image enhancement},
+  author={Wu, Xu and Lai, Zhihui and Zhou, Jie and Hou, Xianxu and Pedrycz, Witold and Shen, Linlin},
+  journal={ACM Transactions on Multimedia Computing, Communications and Applications},
+  volume={20},
+  number={9},
+  pages={1--24},
+  year={2024},
+  publisher={ACM New York, NY},
+  teaser={cover-lowlightvae.jpg},
+  pdf = {https://dl.acm.org/doi/pdf/10.1145/3665498}
+}
+
+
+@inproceedings{wang2025facebench,
+  title={FaceBench: A Multi-View Multi-Level Facial Attribute VQA Dataset for Benchmarking Face Perception MLLMs},
+  author={Wang, Xiaoqin and Ma, Xusen and Hou, Xianxu and Ding, Meidan and Li, Yudong and Chen, Junliang and Chen, Wenting and Peng, Xiaoyang and Shen, Linlin},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  year={2025},
+  abbr={CVPR},
+  selected={true},
+  teaser={cover-facebench.jpg},
+}
+
 @inproceedings{li2024flip,
   title={FLIP-80M: 80 Million Visual-Linguistic Pairs for Facial Language-Image Pre-Training},
   author={Li, Yudong and Hou, Xianxu and Dezhi, Zheng and Shen, Linlin and Zhao, Zhe},
