--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,16 @@
+@article{xie2025clims++,
+  title={Clims++: Cross language image matching with automatic context discovery for weakly supervised semantic segmentation},
+  author={Xie, Jinheng and Deng, Songhe and Hou, Xianxu and Luo, Zhaochuan and Shen, Linlin and Huang, Yawen and Zheng, Yefeng and Shou, Mike Zheng},
+  journal={International Journal of Computer Vision},
+  abbr={IJCV},
+  pages={1--20},
+  year={2025},
+  publisher={Springer},
+  pdf={https://link.springer.com/article/10.1007/s11263-025-02442-2},
+  teaser={cover-ijcv.jpg},
+  selected={true},
+}
+
 @inproceedings{xie2025high,
   title={High-Fidelity Editable Portrait Synthesis with 3D GAN Inversion},
   author={Xie, Jindong and Liu, Jiachen and Lin, Yupei and Wang, Jinbao and Hou, Xianxu and Shen, Linlin},
